src/styles/base/my-prose.css
/* Post content, entire Page, entire Project */

/* prose override */
@layer base {
  .my-prose:not(:where([class~='not-prose'], [class~='not-prose'] *)) {
    @apply prose prose-slate max-w-none dark:prose-invert;

    /* responsive styling */
    /* all tags */
    @apply md:prose-lg;

    /* limit just h1 */
    @apply prose-h1:text-3xl md:prose-h1:text-4xl lg:prose-h1:text-5xl;
    @apply prose-h1:font-bold;
    @apply prose-h1:font-serif;
    @apply prose-h1:text-links;

    /* a */
    a {
      @apply rounded decoration-dashed underline-offset-2;

      &:hover {
        @apply text-primary decoration-primary decoration-wavy dark:text-primary dark:decoration-primary;
      }

      &:focus {
        @apply text-primary no-underline outline-none ring-2 ring-primary ring-offset-2 dark:text-primary;
      }
    }

    /* image */
    @apply prose-img:rounded-2xl;

    /* code */
    code {
      @apply me-2 rounded bg-base-200 px-1 py-0.5 font-mono text-sm font-light text-primary dark:bg-yellow-100 dark:text-yellow-900;
      margin-inline-end: 0;
    }

    /* vertical margins */
    .toc,
    .expressive-code,
    .alert {
      @apply b-p-my;
    }

    .expressive-code {
      text-rendering: optimizeLegibility;
      font-variant-ligatures: common-ligatures;
    }
  }
}

